--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,21 @@
     <string name="order_confirmed">Your Order is Confirmed</string>
     <string name="order_informed">You will be informed by SMS or Call</string>
     <string name="order_summ">Your Order Summary</string>
+    <string name="home">Home</string>
+    <string name="current_booking">Current Booking</string>
+    <string name="history_booking">History Booking</string>
+    <string name="about_us">About Us</string>
+    <string name="termsandcond"><![CDATA[Terms & Conditions]]></string>
+    <string name="logout">Logout</string>
+    <string name="india_std_code">+91</string>
+    <string name="malawi_std_code">+265</string>
+    <string name="mobile_error">Please enter mobile number</string>
+    <string name="mobile_format_error">Please enter a valid mobile number</string>
+    <string name="enter_otp_error">Please enter given OTP.</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="phone">Phone</string>
+    <string name="password">Password</string>
+    <string name="conf_password">Confirm Password</string>
+    <string name="submit">Submit</string>
 </resources>
