--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,14 @@
     <string name="password">Password</string>
     <string name="conf_password">Confirm Password</string>
     <string name="submit">Submit</string>
+    <string name="name_error">Please enter a name</string>
+    <string name="email_empty_eror">Please enter your email id.</string>
+    <string name="email_format_error">Please enter a valid email id.</string>
+    <string name="password_error">Please enter a password</string>
+    <string name="confirm_password_error">Re-enter your password.</string>
+    <string name="confirm_password_same">Both password be same.</string>
+    <string name="password_length">Password length must be 6 characters.</string>
+    <string name="default_notification_channel_id">Lime_channel</string>
+    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
+    <string name="check_tnc">Please check Terms and Conditions.</string>
 </resources>
