--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,5 @@
     <string name="truck">Truck: </string>
     <string name="status">Status</string>
     <string name="no_completed_order">You don\'t have any completed order!</string>
+    <string name="enter_bid_amount">Please enter some bid amount.</string>
 </resources>
